✨ feat: Kafka 기반 알림 서비스 도입 및 기본 기능 구현 완료
- Kafka 연동하여 피드/팔로우 이벤트 처리
- 알림 도메인 생성 (Notification)
- 알림 저장, 조회, 읽음 처리, 삭제 기능 구현
- NotificationType 도입 및 예외 처리 구조 분리
- JwtUtil을 통한 인증 처리

--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,12 @@ dependencies {
 
 	implementation 'org.apache.commons:commons-lang3:3.12.0'
 	implementation 'commons-io:commons-io:2.11.0'
+
+	// Kafka
+	implementation 'org.springframework.kafka:spring-kafka'
+
+// JSON 직렬화
+	implementation 'com.fasterxml.jackson.core:jackson-databind'
 }
 
 // Q클래스가 생성될 위치 설정
